--- a/src/pages/work/corellium/index.mdx
+++ b/src/pages/work/corellium/index.mdx
@@ -1,24 +1,47 @@
 import { ArticleLayout } from '@/components';
-import Image from 'next/future/image';
+import Image from 'next/image';
 
-import hypervisor from './hypervisor.png';
-import magic from './magic.png';
-import ambassador from './ambassador.png';
-import stargate from './stargate.png';
-import atlas from './atlas.png';
-import gray from './gray.png';
-import colour from './colour.png';
-import components from './components.png';
+import logo from './images/corellium.svg';
+import hypervisor from './images/hypervisor.png';
+import magic from './images/magic.png';
+import ambassador from './images/ambassador.png';
+import stargate from './images/stargate.png';
+import atlas from './images/atlas.png';
+import gray from './images/gray.png';
+import colour from './images/colour.png';
+import components from './images/components.png';
 
 export const meta = {
-  title: 'Corellium',
+  logo,
+  company: 'Corellium',
   description:
-    'Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.',
+    'Working with the newly formed frontend team on a range of greenfield projects while also evolving and maintaining the existing core app.',
+  role: 'Senior Frontend Engineer',
+  href: 'https://corellium.com/',
+  start: '2021',
+  end: {
+    label: 'Present',
+    dateTime: new Date().getFullYear(),
+  },
+  tags: [
+    'React',
+    'JavaScript',
+    'TypeScript',
+    'Tailwind',
+    'Storybook',
+    'Next.js',
+    'Stripe',
+    'Segment',
+    'GTM',
+    'Google Analytics',
+  ],
 };
 
 export default (props) => <ArticleLayout meta={meta} {...props} />;
 
 <Image src={hypervisor} alt="" />
+
+Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.
 
 I'm still working at Corellium, and currently focusing on rolling out new features to our core app. While I've only been there for one year, my time has been packed full of shipping new projects and rolling out new features.
 
@@ -28,7 +51,7 @@ I was one of the first dedicated Frontend Engineering hires brought on board to 
 
 Our goals were to create a system to allow us to quickly build new interfaces, introduce a consistent visual style and improve developer experience. We called it <em>Magic</em> 🧙.
 
-It was built out as a Storybook-based design system on React, Next.js, Typescript, CSS Modules (w/ PostCSS), Tailwind, and deployed for preview on Vercel. This stack formed the base for all future frontend projects.
+It was built out as a Storybook-based design system on React, Next, Typescript, CSS Modules (w/ PostCSS), Tailwind, and deployed for preview on Vercel. This stack formed the base for all future frontend projects.
 
 <Image src={magic} alt="" />
 
@@ -58,7 +81,7 @@ Outside of our greenfield projects my primary role has been to maintain the fron
 
 The codebase is quite large and complex and has some areas for improvement that we're still working hard at to make it on-par with our design system and other frontend applications. One of the first big cleanup items was converting all stylesheets to make use of design tokens and bring about greater consistency, improved accessibility and introduce a more modern UI.
 
-Through an audit of hundreds of files I found that we were almost using 50 shades of gray. Colours were in a similar state with not particular pattern to the application.
+After a review of hundreds of files I found that we were using 35 shades of gray (almost 50). Colours were in a similar state with no particular pattern to the steps or application.
 
 <Image src={gray} alt="" />
 
