Case study copy fixes

--- a/src/pages/work/corellium/index.mdx
+++ b/src/pages/work/corellium/index.mdx
@@ -9,7 +9,7 @@ export const meta = {
   preview,
   company: 'Corellium',
   description:
-    'Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.',
+    "I'm still working at Corellium, and while I've only been there for one year, my time has been packed full of shipping new projects and features.",
   role: 'Senior Frontend Engineer',
   href: 'https://corellium.com/',
   start: '2021',
@@ -33,7 +33,7 @@ export const meta = {
 
 export default (props) => <ArticleLayout meta={meta} {...props} />;
 
-I'm still working at Corellium, and currently focusing on rolling out new features to our core app. While I've only been there for one year, my time has been packed full of shipping new projects and rolling out new features.
+Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.
 
 ## Design System
 
