Temp hide preview image

--- a/src/pages/work/corellium/index.mdx
+++ b/src/pages/work/corellium/index.mdx
@@ -6,7 +6,7 @@ import preview from './images/preview.jpg';
 
 export const meta = {
   logo,
-  preview,
+  // preview,
   company: 'Corellium',
   description:
     "I'm still working at Corellium, and while I've only been there for one year, my time has been packed full of shipping new projects and features.",
