--- a/content/work/corellium.mdx
+++ b/content/work/corellium.mdx
@@ -1,23 +1,13 @@
-import Image from 'next/image';
-import { ArticleLayout } from '@/components';
-
-import logo from './images/corellium.svg';
-import preview from './images/preview.jpg';
-
-export const meta = {
-  logo,
-  // preview,
-  company: 'Corellium',
-  description:
-    "I'm still working at Corellium, and while I've only been there for one year, my time has been packed full of shipping new projects and features.",
-  role: 'Senior Frontend Engineer',
-  href: 'https://corellium.com/',
-  start: '2021',
-  end: {
-    label: 'Present',
-    dateTime: new Date().getFullYear(),
-  },
-  tags: [
+---
+logo: /work/corellium/corellium.svg
+preview: /work/corellium/preview.jpg
+company: Corellium
+description: I'm still working at Corellium, and while Ive only been there for one year, my time has been packed full of shipping new projects and features.
+role: Senior Frontend Engineer
+href: https://corellium.com/
+start: 2021
+tags:
+  [
     'React',
     'JavaScript',
     'TypeScript',
@@ -28,10 +18,8 @@ export const meta = {
     'Segment',
     'GTM',
     'Google Analytics',
-  ],
-};
-
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+  ]
+---
 
 Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.
 
@@ -39,7 +27,7 @@ Corellium are pioneers of a unique Arm-based device virtualisation platform, wor
 
 I was one of the first dedicated Frontend Engineering hires brought on board to help the company as it moves to scale up its growth. Our team had a large number of future projects planned, so we quickly identified the need for a comprehensive design system.
 
-Our goals were to create a system to allow us to quickly build new interfaces, introduce a consistent visual style and improve developer experience. We called it <em>Magic</em> 🧙.
+Our goals were to create a system to allow us to quickly build new interfaces, introduce a consistent visual style and improve developer experience. We called it _Magic_ 🧙.
 
 It was built out as a Storybook-based design system on React, Next, Typescript, CSS Modules (w/ PostCSS), Tailwind, and deployed for preview on Vercel. This stack formed the base for all future frontend projects.
 
