--- a/content/work/koala.mdx
+++ b/content/work/koala.mdx
@@ -1,21 +1,14 @@
-import { ArticleLayout } from '@/components';
-import Image from 'next/image';
-import Link from 'next/link';
-
-import logo from './images/koala.svg';
-import preview from './images/preview.jpg';
-
-export const meta = {
-  logo,
-  preview,
-  company: 'Koala',
-  role: 'Senior UX Engineer',
-  href: 'https://koala.com/en-au',
-  description:
-    'Joined at an exciting time, just before the company underwent a rebrand, a launch into a new market and a complete digital transformation.',
-  start: '2020',
-  end: '2021',
-  tags: [
+---
+logo: /work/koala/koala.svg
+preview: /work/koala/preview.jpg
+company: Koala
+role: Senior UX Engineer
+href: https://koala.com/en-au
+description: Joined at an exciting time, just before the company underwent a rebrand, a launch into a new market and a complete digital transformation.
+start: 2020
+end: 2021
+tags:
+  [
     'Vue',
     'Nuxt',
     'React',
@@ -28,10 +21,8 @@ export const meta = {
     'Segment',
     'GTM',
     'Google Analytics',
-  ],
-};
-
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+  ]
+---
 
 I joined Koala in late 2020, during the height of the COVID-19 pandemic. After an in-person orientation, we transitioned to remote work. In my first few months at the company, I was responsible for maintaining and enhancing the existing eCommerce websites for Australia and Japan. This was my first exposure to Vue, Nuxt, and Shopify, but I quickly became familiar with the workflow and started shipping updates.
 
@@ -45,30 +36,12 @@ One of our main goals with the digital transformation initiative was to make eve
 
 ## Launch and farewell
 
-In mid-2021, the all-new Koala platform launched simultaneously in Australia, Japan, and Korea. The team was excited and celebrated this major achievement, as detailed in a <a href="https://www.linkedin.com/posts/andrew-sladen-bb2b92a_koala-mattress-furniture-fast-free-activity-6826275860887302144-qxud">LinkedIn post</a> by Andrew Sladen.
+In mid-2021, the all-new Koala platform launched simultaneously in Australia, Japan, and Korea. The team was excited and celebrated this major achievement, as detailed in a [LinkedIn post](https://www.linkedin.com/posts/andrew-sladen-bb2b92a_koala-mattress-furniture-fast-free-activity-6826275860887302144-qxud) by Andrew Sladen.
 
-Unfortunately, after almost exactly one year of employment at Koala, I was lured away by <Link href="/work/corellium">Corellium</Link>. While it was bittersweet to leave such a great team and project behind, I greatly enjoyed my time at Koala and am grateful for the experience and skills I gained there.
+Unfortunately, after almost exactly one year of employment at Koala, I was lured away by [Corellium](/work/corellium). While it was bittersweet to leave such a great team and project behind, I greatly enjoyed my time at Koala and am grateful for the experience and skills I gained there.
 
 ## Further reading
 
-- <Link
-    href="https://www.digitas.com/en-us/work/koala-rebrand"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    Digitas - Koala Rebrand
-  </Link>
-- <Link
-    href="https://www.jasonlamdesign.com/koala-design-system"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    Jason Lam - Koala Design System
-  </Link>
-- <Link
-    href="https://aws.amazon.com/solutions/case-studies/koala-case-study/"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
-    AWS - Koala Case Study
-  </Link>
+- [Digitas - Koala Rebrand](https://www.digitas.com/en-us/work/koala-rebrand)
+- [Jason Lam - Koala Design System](https://www.jasonlamdesign.com/koala-design-system)
+- [AWS - Koala Case Study](https://aws.amazon.com/solutions/case-studies/koala-case-study/)
