--- a/content/work/corellium.mdx
+++ b/content/work/corellium.mdx
@@ -7,18 +7,16 @@ role: Senior Frontend Engineer
 href: https://corellium.com/
 start: 2021
 tags:
-  [
-    'React',
-    'JavaScript',
-    'TypeScript',
-    'Tailwind',
-    'Storybook',
-    'Next',
-    'Stripe',
-    'Segment',
-    'GTM',
-    'Google Analytics',
-  ]
+  - React
+  - JavaScript
+  - TypeScript
+  - Tailwind
+  - Storybook
+  - Next
+  - Stripe
+  - Segment
+  - GTM
+  - Google Analytics
 ---
 
 Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.
