--- a/content/work/koala.mdx
+++ b/content/work/koala.mdx
@@ -8,20 +8,18 @@ description: Joined at an exciting time, just before the company underwent a reb
 start: 2020
 end: 2021
 tags:
-  [
-    'Vue',
-    'Nuxt',
-    'React',
-    'JavaScript',
-    'TypeScript',
-    'Tailwind',
-    'Storybook',
-    'Next',
-    'Shopify',
-    'Segment',
-    'GTM',
-    'Google Analytics',
-  ]
+  - Vue
+  - Nuxt
+  - React
+  - JavaScript
+  - TypeScript
+  - Tailwind
+  - Storybook
+  - Next
+  - Shopify
+  - Segment
+  - GTM
+  - Google Analytics
 ---
 
 I joined Koala in late 2020, during the height of the COVID-19 pandemic. After an in-person orientation, we transitioned to remote work. In my first few months at the company, I was responsible for maintaining and enhancing the existing eCommerce websites for Australia and Japan. This was my first exposure to Vue, Nuxt, and Shopify, but I quickly became familiar with the workflow and started shipping updates.
