Fix linting errors, restructure images

--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -1,12 +1,9 @@
 import Image from 'next/image';
 import { ArticleLayout } from '@/components';
 
-import logo from './images/corellium.svg';
-import preview from './images/preview.jpg';
-
 export const meta = {
-  logo,
-  // preview,
+  logo: '/work/corellium/corellium.svg',
+  preview: '/work/corellium/preview.jpg',
   company: 'Corellium',
   description:
     "I'm still working at Corellium, and while I've only been there for one year, my time has been packed full of shipping new projects and features.",
