--- a/src/pages/work/gunmetal.mdx
+++ b/src/pages/work/gunmetal.mdx
@@ -1,10 +1,8 @@
 import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
-import logo from './images/gunmetal.svg';
-
 export const meta = {
-  logo,
+  logo: '/work/gunmetal/gunmetal.svg',
   company: 'Gunmetal Studio',
   role: 'Partner',
   href: 'https://gunmetal.com.au/',
