--- a/src/pages/work/koala.mdx
+++ b/src/pages/work/koala.mdx
@@ -2,12 +2,9 @@ import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 import Link from 'next/link';
 
-import logo from './images/koala.svg';
-import preview from './images/preview.jpg';
-
 export const meta = {
-  logo,
-  preview,
+  logo: '/work/koala/koala.svg',
+  preview: '/work/koala/preview.jpg',
   company: 'Koala',
   role: 'Senior UX Engineer',
   href: 'https://koala.com/en-au',
