--- a/src/pages/work/nexba.mdx
+++ b/src/pages/work/nexba.mdx
@@ -1,10 +1,8 @@
 import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
-import logo from './images/nexba.svg';
-
 export const meta = {
-  logo,
+  logo: '/work/nexba/nexba.svg',
   company: 'Nexba Beverages',
   role: 'Frontend Developer',
   href: 'https://www.nexba.com/',
