--- a/src/pages/work/redpin.mdx
+++ b/src/pages/work/redpin.mdx
@@ -1,10 +1,8 @@
 import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
-import logo from './images/redpin.svg';
-
 export const meta = {
-  logo,
+  logo: '/work/redpin/redpin.svg',
   company: 'Redpin Design',
   role: 'Frontend Developer',
   href: 'https://redpin.com.au/',
