--- a/src/pages/work/tyro.mdx
+++ b/src/pages/work/tyro.mdx
@@ -1,10 +1,8 @@
 import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
-import logo from './images/tyro.png';
-
 export const meta = {
-  logo,
+  logo: '/work/tyro/tyro.png',
   company: 'Tyro',
   role: 'Frontend Developer',
   href: 'https://www.tyro.com/',
