--- a/src/pages/work/bsa.mdx
+++ b/src/pages/work/bsa.mdx
@@ -1,10 +1,8 @@
 import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
-import logo from './images/bsa.svg';
-
 export const meta = {
-  logo,
+  logo: '/work/bsa/bsa.svg',
   company: 'BSA Limited',
   role: 'Motion Designer',
   href: 'https://www.bsa.com.au/',
