--- a/src/pages/work/freelance.mdx
+++ b/src/pages/work/freelance.mdx
@@ -1,10 +1,8 @@
 import Image from 'next/image';
 import { ArticleLayout } from '@/components';
 
-import logo from '@/images/avatar.jpg';
-
 export const meta = {
-  logo,
+  logo: '/profile.png',
   company: 'Freelance',
   role: '',
   description:
