--- a/src/pages/work/surge.mdx
+++ b/src/pages/work/surge.mdx
@@ -1,10 +1,8 @@
 import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
-import logo from './images/surge.svg';
-
 export const meta = {
-  logo,
+  logo: '/work/surge/surge.svg',
   company: 'Surge',
   role: 'Creative Director',
   href: 'https://surge.studio/',
