--- a/src/pages/work/redpin.mdx
+++ b/src/pages/work/redpin.mdx
@@ -7,9 +7,47 @@ export const meta = {
   role: 'Frontend Developer',
   href: 'https://redpin.com.au/',
   description:
-    'Worked on a range of projects involving web development, design, branding, edm campaigns & competitions. Clients include CASF, Sekisui, Tismor, CRC, OCP, Snack Brands, Green’s, Auspath & Pacefarm.',
+    'Worked on a range of projects involving web development, design, branding, edm campaigns & competitions.',
   start: '2014',
   end: '2016',
+  clients: [
+    {
+      name: 'CASF',
+      logo: '/clients/casf.svg',
+    },
+    {
+      name: 'Sekisui',
+      logo: '/clients/sekisui.svg',
+    },
+    {
+      name: 'Tismor',
+      logo: '/clients/tismor.svg',
+    },
+    {
+      name: 'CRC',
+      logo: '/clients/crc.svg',
+    },
+    {
+      name: 'OCP',
+      logo: '/clients/ocp.svg',
+    },
+    {
+      name: 'Snack Brands',
+      logo: '/clients/snackbrands.svg',
+    },
+    {
+      name: 'Green’s',
+      logo: '/clients/greens.svg',
+    },
+    {
+      name: 'Auspath',
+      logo: '/clients/auspath.svg',
+    },
+    {
+      name: 'Pacefarm',
+      logo: '/clients/pacefarm.svg',
+    },
+  ],
 };
 
 export default (props) => <ArticleLayout meta={meta} {...props} />;
