--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -2,7 +2,6 @@ import Image from 'next/image';
 import { ArticleLayout } from '@/components';
 
 export const meta = {
-  logo: '/work/corellium/corellium.svg',
   preview: '/work/corellium/preview.jpg',
   company: 'Corellium',
   description:
@@ -36,7 +35,7 @@ Corellium are pioneers of a unique Arm-based device virtualisation platform, wor
 
 I was one of the first dedicated Frontend Engineering hires brought on board to help the company as it moves to scale up its growth. Our team had a large number of future projects planned, so we quickly identified the need for a comprehensive design system.
 
-Our goals were to create a system to allow us to quickly build new interfaces, introduce a consistent visual style and improve developer experience. We called it <em>Magic</em> 🧙.
+Our goals were to create a system to allow us to quickly build new interfaces, introduce a consistent visual style and improve developer experience. We called it <em>Magic</em>.
 
 It was built out as a Storybook-based design system on React, Next, Typescript, CSS Modules (w/ PostCSS), Tailwind, and deployed for preview on Vercel. This stack formed the base for all future frontend projects.
 
