--- a/src/pages/work/redpin.mdx
+++ b/src/pages/work/redpin.mdx
@@ -2,7 +2,6 @@ import { ArticleLayout } from '@/components';
 import Image from 'next/image';
 
 export const meta = {
-  logo: '/work/redpin/redpin.svg',
   company: 'Redpin Design',
   role: 'Frontend Developer',
   href: 'https://redpin.com.au/',
@@ -13,39 +12,30 @@ export const meta = {
   clients: [
     {
       name: 'CASF',
-      logo: '/clients/casf.svg',
     },
     {
       name: 'Sekisui',
-      logo: '/clients/sekisui.svg',
     },
     {
       name: 'Tismor',
-      logo: '/clients/tismor.svg',
     },
     {
       name: 'CRC',
-      logo: '/clients/crc.svg',
     },
     {
       name: 'OCP',
-      logo: '/clients/ocp.svg',
     },
     {
       name: 'Snack Brands',
-      logo: '/clients/snackbrands.svg',
     },
     {
-      name: 'Green’s',
-      logo: '/clients/greens.svg',
+      name: "Green's",
     },
     {
       name: 'Auspath',
-      logo: '/clients/auspath.svg',
     },
     {
       name: 'Pacefarm',
-      logo: '/clients/pacefarm.svg',
     },
   ],
 };
