Improve content and links

--- a/src/pages/work/bsa.mdx
+++ b/src/pages/work/bsa.mdx
@@ -4,7 +4,10 @@ import Image from 'next/image';
 export const meta = {
   company: 'BSA Limited',
   role: 'Motion Designer',
-  href: 'https://www.bsa.com.au/',
+  link: {
+    href: 'https://www.bsa.com.au/',
+    label: 'bsa.com.au',
+  },
   description:
     'Contract work on a variety of projects involving motion graphics, visual effects, graphic design and web development.',
   start: '2012',
