--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -7,7 +7,10 @@ export const meta = {
   description:
     "I'm still working at Corellium, and while I've only been there for one year, my time has been packed full of shipping new projects and features.",
   role: 'Senior Frontend Engineer',
-  href: 'https://corellium.com/',
+  link: {
+    label: 'corellium.com',
+    href: 'https://corellium.com/',
+  },
   start: '2021',
   end: {
     label: 'Present',
@@ -20,6 +23,7 @@ export const meta = {
     'Tailwind',
     'Storybook',
     'Next',
+    'Redux',
     'Stripe',
     'Segment',
     'GTM',
