--- a/src/pages/work/gunmetal.mdx
+++ b/src/pages/work/gunmetal.mdx
@@ -4,7 +4,10 @@ import Image from 'next/image';
 export const meta = {
   company: 'Gunmetal Studio',
   role: 'Partner',
-  href: 'https://gunmetal.com.au/',
+  link: {
+    label: 'gunmetal.com.au',
+    href: 'https://gunmetal.com.au/',
+  },
   description:
     'Co-founded a web design and development studio. We worked with a range of clients from startups to clothing brands and even big corporate and entertainment companies.',
   start: '2013',
