--- a/src/pages/work/koala.mdx
+++ b/src/pages/work/koala.mdx
@@ -6,7 +6,10 @@ export const meta = {
   preview: '/work/koala/preview.jpg',
   company: 'Koala',
   role: 'Senior UX Engineer',
-  href: 'https://koala.com/en-au',
+  link: {
+    href: 'https://koala.com/en-au',
+    label: 'koala.com',
+  },
   description:
     'Joined at an exciting time, just before the company underwent a rebrand, a launch into a new market and a complete digital transformation.',
   start: '2020',
