--- a/src/pages/work/nexba.mdx
+++ b/src/pages/work/nexba.mdx
@@ -5,6 +5,10 @@ export const meta = {
   company: 'Nexba Beverages',
   role: 'Frontend Developer',
   href: 'https://www.nexba.com/',
+  link: {
+    label: 'nexba.com',
+    href: 'https://www.nexba.com/',
+  },
   description:
     'Design and web development internship working on the Nexba eCommerce website.',
   start: '2013',
