--- a/src/pages/work/redpin.mdx
+++ b/src/pages/work/redpin.mdx
@@ -4,7 +4,10 @@ import Image from 'next/image';
 export const meta = {
   company: 'Redpin Design',
   role: 'Frontend Developer',
-  href: 'https://redpin.com.au/',
+  link: {
+    label: 'redpin.com.au',
+    href: 'https://redpin.com.au/',
+  },
   description:
     'Worked on a range of projects involving web development, design, branding, edm campaigns & competitions.',
   start: '2014',
