--- a/src/pages/work/tyro.mdx
+++ b/src/pages/work/tyro.mdx
@@ -4,7 +4,10 @@ import Image from 'next/image';
 export const meta = {
   company: 'Tyro',
   role: 'Frontend Developer',
-  href: 'https://www.tyro.com/',
+  link: {
+    label: 'tyro.com',
+    href: 'https://www.tyro.com/',
+  },
   description:
     'Tyro is an ASX listed company providing business focused payment, banking and lending products. I was the owner of the tyro.com website and responsible for frontend development, design & content including the launch of all digital, brand and customer marketing campaigns, projects, partnerships and initiatives.',
   start: '2016',
