--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -1,5 +1,5 @@
 import Image from 'next/image';
-import { ArticleLayout } from '@/components';
+import { WorkLayout } from '@/components';
 
 export const meta = {
   preview: '/work/corellium/preview.jpg',
@@ -31,7 +31,7 @@ export const meta = {
   ],
 };
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <WorkLayout meta={meta} {...props} />;
 
 Corellium are pioneers of a unique Arm-based device virtualisation platform, working to advance security and development work on mobile, IoT, and beyond.
 
