--- a/src/pages/work/gunmetal.mdx
+++ b/src/pages/work/gunmetal.mdx
@@ -1,5 +1,4 @@
-import { ArticleLayout } from '@/components';
-import Image from 'next/image';
+import { WorkLayout } from '@/components';
 
 export const meta = {
   company: 'Gunmetal Studio',
@@ -34,4 +33,4 @@ export const meta = {
   ],
 };
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <WorkLayout meta={meta} {...props} />;
