--- a/src/pages/work/koala.mdx
+++ b/src/pages/work/koala.mdx
@@ -1,5 +1,4 @@
-import { ArticleLayout } from '@/components';
-import Image from 'next/image';
+import { WorkLayout } from '@/components';
 import Link from 'next/link';
 
 export const meta = {
@@ -30,7 +29,7 @@ export const meta = {
   ],
 };
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <WorkLayout meta={meta} {...props} />;
 
 I joined Koala in late 2020, during the height of the COVID-19 pandemic. After an in-person orientation, we transitioned to remote work. In my first few months at the company, I was responsible for maintaining and enhancing the existing eCommerce websites for Australia and Japan. This was my first exposure to Vue, Nuxt, and Shopify, but I quickly became familiar with the workflow and started shipping updates.
 
