--- a/src/pages/work/surge.mdx
+++ b/src/pages/work/surge.mdx
@@ -1,5 +1,4 @@
-import { ArticleLayout } from '@/components';
-import Image from 'next/image';
+import { WorkLayout } from '@/components';
 
 export const meta = {
   company: 'Surge',
@@ -44,4 +43,4 @@ Surge was initially formed as a digital studio to help startups and scaleups cli
 
 Since then the client-serving portion of the business was scaled down and focus shifted to internal experimentation and application development.
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <WorkLayout meta={meta} {...props} />;
