--- a/src/pages/work/tyro.mdx
+++ b/src/pages/work/tyro.mdx
@@ -1,5 +1,4 @@
-import { ArticleLayout } from '@/components';
-import Image from 'next/image';
+import { WorkLayout } from '@/components';
 
 export const meta = {
   company: 'Tyro',
@@ -14,6 +13,6 @@ export const meta = {
   end: '2020',
 };
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <WorkLayout meta={meta} {...props} />;
 
 export const getStaticProps = async () => ({ notFound: true });
