--- a/src/pages/work/nexba.mdx
+++ b/src/pages/work/nexba.mdx
@@ -1,5 +1,4 @@
-import { ArticleLayout } from '@/components';
-import Image from 'next/image';
+import { WorkLayout } from '@/components';
 
 export const meta = {
   company: 'Nexba Beverages',
@@ -15,6 +14,6 @@ export const meta = {
   end: '2013',
 };
 
-export default (props) => <ArticleLayout meta={meta} {...props} />;
+export default (props) => <WorkLayout meta={meta} {...props} />;
 
 export const getStaticProps = async () => ({ notFound: true });
