Link work list to case studies

--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -2,6 +2,7 @@ import Image from 'next/image';
 import { WorkLayout } from '@/components';
 
 export const meta = {
+  published: true,
   company: 'Corellium',
   role: 'Senior Frontend Engineer',
   link: {
