--- a/src/pages/work/koala.mdx
+++ b/src/pages/work/koala.mdx
@@ -2,6 +2,7 @@ import { WorkLayout } from '@/components';
 import Link from 'next/link';
 
 export const meta = {
+  published: true,
   company: 'Koala',
   role: 'Senior UX Engineer',
   link: {
