--- a/src/pages/work/surge.mdx
+++ b/src/pages/work/surge.mdx
@@ -1,6 +1,7 @@
 import { WorkLayout } from '@/components';
 
 export const meta = {
+  published: true,
   company: 'Surge',
   role: 'Creative Director',
   link: {
