--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -71,7 +71,7 @@ Outside of our greenfield projects my primary role has been to maintain the fron
 
 The codebase is quite large and complex and has some areas for improvement that we're still working hard at to make it on-par with our design system and other frontend applications.
 
-One of the first big cleanup pieces of work was converting all plain CSS to use reusable design tokens and bring the UI to alignment with our other custom touchpoints, implement greater UI consistency, and improved accessibility. Using Tailwind as our new basis we have almost completed a full conversion of styles framework within the app.
+One of the first big cleanup pieces of work was converting all plain CSS to use reusable design tokens and bring the UI to alignment with our other customer touchpoints, implement greater UI consistency, and improved accessibility. Using Tailwind as our new basis we have almost completed a full conversion of styles framework within the app.
 
 In early 2023 I was promoted from Senior Frontend Engineer to Frontend Engineering Manager. I now lead frontend at Corellium and continue to work with the product, design and other engineering teams to continue to rollout new features and improvements to our customers.
 
