--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -4,7 +4,7 @@ import { WorkLayout } from '@/components';
 export const meta = {
   published: true,
   company: 'Corellium',
-  role: 'Senior Frontend Engineer',
+  role: 'Frontend Engineering Manager',
   link: {
     href: 'https://corellium.com/',
     label: 'corellium.com',
@@ -74,5 +74,3 @@ The codebase is quite large and complex and has some areas for improvement that 
 One of the first big cleanup pieces of work was converting all plain CSS to use reusable design tokens and bring the UI to alignment with our other customer touchpoints, implement greater UI consistency, and improved accessibility. Using Tailwind as our new basis we have almost completed a full conversion of styles framework within the app.
 
 In early 2023 I was promoted from Senior Frontend Engineer to Frontend Engineering Manager. I now lead frontend at Corellium and continue to work with the product, design and other engineering teams to continue to rollout new features and improvements to our customers.
-
-The frontend team is also currently in the process of getting the design system ready for implementation into the primary app to replace existing components. We'll also be finishing the conversion of remaining files to functional components and TypeScript while implementing a sorely needed testing framework.
