--- a/src/pages/work/bsa.mdx
+++ b/src/pages/work/bsa.mdx
@@ -1,4 +1,4 @@
-import { WorkLayout } from '@/components';
+import { WorkLayout } from '@/components/work-layout';
 import Image from 'next/image';
 
 export const meta = {
