--- a/src/pages/work/corellium.mdx
+++ b/src/pages/work/corellium.mdx
@@ -1,5 +1,5 @@
 import Image from 'next/image';
-import { WorkLayout } from '@/components';
+import { WorkLayout } from '@/components/work-layout';
 
 export const meta = {
   published: true,
