--- a/src/pages/work/koala.mdx
+++ b/src/pages/work/koala.mdx
@@ -1,4 +1,4 @@
-import { WorkLayout } from '@/components';
+import { WorkLayout } from '@/components/work-layout';
 import Link from 'next/link';
 
 export const meta = {
