--- a/src/pages/work/nexba.mdx
+++ b/src/pages/work/nexba.mdx
@@ -1,4 +1,4 @@
-import { WorkLayout } from '@/components';
+import { WorkLayout } from '@/components/work-layout';
 
 export const meta = {
   company: 'Nexba Beverages',
