--- a/src/pages/work/surge.mdx
+++ b/src/pages/work/surge.mdx
@@ -1,4 +1,6 @@
-import { WorkLayout, PageLayout, ProjectsList } from '@/components';
+import { WorkLayout } from '@/components/work-layout';
+import { PageLayout } from '@/components/page-layout';
+import { ProjectsList } from '@/components/projects-list';
 
 export const meta = {
   published: true,
