--- a/src/pages/work/surge.mdx
+++ b/src/pages/work/surge.mdx
@@ -53,7 +53,7 @@ export default (props) => (
       additionalContent={
         <>
           <h2 className="mb-4 text-base font-medium text-white">Projects</h2>
-          <ProjectsList studioOnly />
+          <ProjectsList />
         </>
       }
       {...props}
